syntax = "proto3";

import "status.proto";
package demo;

enum DataType {
    NULL = 0;
    INT16 = 2;
    INT32 = 3;
    INT64 = 4;

    STRING = 20;

    BOOL = 30;

    FLOAT = 40;
    DOUBLE = 41;

    VECTOR = 100;
    UNKNOWN = 9999;
}

message KeyValuePair {
    string key = 1;
    string value = 2;
}

///////////////////////////////////////////////////////////////////

message VectorFieldInfo {
    int64 dimension = 1;
    int64  distance_metric = 2;
    int64 index_file_size = 3;
}

message FieldType {
    oneof value {
        DataType type = 1;
        VectorFieldInfo info = 2;
    }
}

message FieldParam {
    uint64 id = 1;
    string name = 2;
    FieldType type = 3;
}

message VectorFieldValue {
    repeated float float_value = 1;
    bytes binary_value = 2;
}

//message FieldValue {
//    oneof value {
//        int32 int32_value = 1;
//        int64 int64_value = 2;
//        float float_value = 3;
//        double double_value = 4;
//        string string_value = 5;
//        bool  bool_value = 6;
//        VectorFieldValue vector_value = 7;
//    }
//}

///////////////////////////////////////////////////////////////////

message CollectionName {
    string collection_name = 1;
}

message Mapping {
    Status status = 1;
    uint64 collection_id = 2;
    string collection_name = 3;
    repeated FieldParam fields = 4;
}

message MappingList {
    Status status = 1;
    repeated Mapping mapping_list = 2;
}

///////////////////////////////////////////////////////////////////

message TermQuery {
    string field_name = 1;
    repeated string values = 2;
    float boost = 3;
    repeated KeyValuePair extra_params = 4;
}

enum CompareOperator {
    LT = 0;
    LTE = 1;
    EQ = 2;
    GT = 3;
    GTE = 4;
    NE = 5;
}

message CompareExpr {
    CompareOperator operator = 1;
    string operand = 2;
}

message RangeQuery {
    string field_name = 1;
    repeated CompareExpr operand = 2;
    float boost = 3;
    repeated KeyValuePair extra_params = 4;
}

message VectorRecord {
    repeated float float_data = 1;
    bytes binary_data = 2;
}

message VectorQuery {
    string field_name = 1;
    int64 topk = 2;
    float query_boost = 3;
    repeated VectorRecord records = 4;
    repeated KeyValuePair extra_params = 5;
}

enum Occur {
    INVALID = 0;
    MUST = 1;
    SHOULD = 2;
    MUST_NOT = 3;
}

message BooleanQuery {
    Occur occur = 1;
    repeated GeneralQuery general_query = 2;
}

message GeneralQuery {
    oneof query {
        BooleanQuery boolean_query = 1;
        TermQuery term_query = 2;
        RangeQuery range_query = 3;
        VectorQuery vector_query = 4;
    }
}

message SearchParam {
    string collection_name = 1;
    repeated string partition_tag_array = 2;
    repeated GeneralQuery general_query = 3;
    repeated KeyValuePair extra_params = 4;
}

message SearchInFilesParam {
    repeated string file_id_array = 1;
    SearchParam search_param = 2;
}

///////////////////////////////////////////////////////////////////

message Entity {
    Status status = 1;
    int64 entity_id = 2;
    repeated string field_names = 3;
    repeated string vaules = 4;
}

message QueryResult {
    Status status = 1;
    repeated Entity entities = 2;
    int64 row_num = 3;
    repeated float score = 4;
    repeated float distance = 5;
}

message InsertParam {
    string collection_name = 1;
    string partition_tag = 2;
    repeated Entity entities = 3;
    repeated int64 entity_id_array = 4;
    repeated KeyValuePair extra_params = 5;
}

message EntityIdentity {
    string collection_name = 1;
    int64 id = 2;
}

message EntityIDs {
    Status status = 1;
    repeated int64 entity_id_array = 2;
}

message GetEntityIDsParam {
    string collection_name = 1;
    string segment_name = 2;
}

message DeleteByIDParam {
    string collection_name = 1;
    repeated int64 id_array = 2;
}

///////////////////////////////////////////////////////////////////

message PartitionParam {
    string collection_name = 1;
    string tag = 2;
}

message PartitionList {
    Status status = 1;
    repeated string partition_tag_array = 2;
}

///////////////////////////////////////////////////////////////////

message BoolReply {
    Status status = 1;
    bool bool_reply = 2;
}

message CollectionRowCount {
    Status status = 1;
    int64 collection_row_count = 2;
}

message SegmentStat {
    string segment_name = 1;
    int64 row_count = 2;
    string index_name = 3;
    int64 data_size = 4;
}

message PartitionStat {
    string tag = 1;
    int64 total_row_count = 2;
    repeated SegmentStat segments_stat = 3;
}

message CollectionInfo {
    Status status = 1;
    int64 total_row_count = 2;
    repeated PartitionStat partitions_stat = 3;
}

message IndexParam {
    Status status = 1;
    string collection_name = 2;
    int32 index_type = 3;
    repeated KeyValuePair extra_params = 4;
}

message Command {
    string cmd = 1;
}

message StringReply {
    Status status = 1;
    string string_reply = 2;
}

message FlushParam {
    repeated string collection_name_array = 1;
}


service DemoService {
    rpc CreateCollection(Mapping) returns (Status) {}

    rpc HasCollection(CollectionName) returns (BoolReply) {}

    rpc DropCollection(CollectionName) returns (Status) {}

    rpc DescribeCollection(CollectionName) returns (Mapping) {}

    rpc CountCollection(CollectionName) returns (CollectionRowCount) {}

    rpc ShowCollections(Command) returns (MappingList) {}

    rpc ShowCollectionInfo (CollectionName) returns (CollectionInfo) {}

    rpc PreloadCollection(CollectionName) returns (Status) {}

    ///////////////////////////////////////////////////////////////////

    rpc CreateIndex(IndexParam) returns (Status) {}

    rpc DescribeIndex(CollectionName) returns (IndexParam) {}

    rpc DropIndex(CollectionName) returns (Status) {}

    ///////////////////////////////////////////////////////////////////

    rpc Insert(InsertParam) returns (EntityIDs) {}

    rpc Search(SearchParam) returns (QueryResult) {}

    rpc SearchInFiles(SearchInFilesParam) returns (QueryResult) {}

    rpc GetEntityByID(EntityIdentity) returns (Entity) {}

    rpc GetEntityIDs(GetEntityIDsParam) returns (EntityIDs) {}

    rpc DeleteByID(DeleteByIDParam) returns (Status) {}

    ///////////////////////////////////////////////////////////////////

    rpc CreatePartition(PartitionParam) returns (Status) {}

    rpc ShowPartitions(CollectionName) returns (PartitionList) {}

    rpc DropPartition(PartitionParam) returns (Status) {}

    ///////////////////////////////////////////////////////////////////

    rpc Cmd(Command) returns (StringReply) {}

    rpc Flush(FlushParam) returns (Status) {}

    rpc Compact(CollectionName) returns (Status) {}

}
